--- a/pythonclub/club/templates/base.html
+++ b/pythonclub/club/templates/base.html
@@ -20,6 +20,8 @@
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'resource' %}">Resources</a></li>
                 <li><a href="{% url 'meeting' %}">Meetings</a></li>
+                <li><a href="{% url 'newmeeting' %}">New Meeting</a></li>
+                <li><a href="{% url 'newresource' %}">New Resource</a></li>
             </ul>
         </div>
     </nav>
